# TRAJECTORY-TRACKING-ROBOT

./: README.md
chucnang_bot/: CMakeLists.txt  package.xml
chucnang_bot/chucnang_bot/: euler_to_quaternion.py
chucnang_bot/scripts/: demo.py  diff_drive_MPC.py  diff_drive_PID_control.py  lidar_node.py  pub_path_odom.py  robot_navigator.py  rplidar_get.py  run_lidar.py  run_wayoint.py  send_pose.py  send_pose_part2.py  test_pub.py
codeFimwareMain/: codeFimwareMain.ino  servos.h  servos.ino  turne_PID.h
diffdrive_arduino/: package.xml
diffdrive_arduino/controllers/: robot_controller_example.yaml
diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h
diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp  diffdrive_robot.cpp
pumkbot/: CMakeLists.txt  package.xml
pumkbot/config/: mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml
pumkbot/description/: lidar.xacro  robot.urdf.xacro  robot_main.xacro  ros2_control.xacro
pumkbot/launch/: launch_robot.launch.py  local_launch.py  navigation_launch.py  online_async_launch.py  simulation.launch.py
