<?xml version="1.0"?>
<package format="2">
  <name>diffdrive_arduino</name>
  <version>0.0.1</version>
  <description> diff_drive_controller </description>

  <maintainer email="khoixyz@gmail.com">Pumk</maintainer>
  <author email="khoixyz@gmail.com">Pumk</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>serial</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
